# wayvibes

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  install_wayvibes.sh  main.cpp  wayvibes
akko_lavender_purples/: config.json
src/: audio.cpp  audio.h  config.cpp  config.h  device.cpp  device.h  main.cpp  utils.h
